--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,15 @@
+#Maven#
 target/
-!.mvn/wrapper/maven-wrapper.jar
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-
-### IntelliJ IDEA ###
-.idea
-*.iws
+#IDEA#
+.idea/
 *.iml
-*.ipr
+.mvn/
+mvnw*
 
-### NetBeans ###
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-.nb-gradle/
+#Eclipse#
+.settings/
+.metadata/
+.classpath
+.project
+Servers/
